--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>EXTREME HACKING TERMINAL</title>
 <style>
-html, body { margin:0; padding:0; width:100%; height:100%; background:black; overflow:hidden; font-family:'Courier New', monospace; }
+html, body { margin:0; padding:0; width:100%; height:100%; background:black; overflow:hidden; font-family:'Courier New', monospace; user-select:none; }
 body { color:#0f0; transition: background 1s ease; }
 body.crashed { background:black !important; }
 body::before { content:""; position:absolute; top:0; left:0; width:100%; height:100%; background: repeating-linear-gradient(transparent, transparent 1px, rgba(0,255,0,0.05) 2px); pointer-events:none; z-index:5; transition: opacity 1s ease; }
@@ -17,15 +17,13 @@ body.crashed::before { opacity:0; }
 .red { background:#ff5f56; }
 .yellow { background:#ffbd2e; }
 .green { background:#27c93f; }
-#screen { position:relative; flex:1; color:#0f0; text-shadow:0 0 5px #0f0,0 0 10px #0f0; white-space:pre-wrap; overflow:auto; z-index:10; transition: opacity 1s ease; }
+#screen { position:relative; flex:1; color:#0f0; text-shadow:0 0 5px #0f0,0 0 10px #0f0; white-space:pre-wrap; overflow:hidden; z-index:10; transition: opacity 1s ease; }
 #footer { position:absolute; bottom:10px; left:20px; font-size:14px; color:#0f0; z-index:10; transition: opacity 1s ease; }
 canvas { position:absolute; top:0; left:0; width:100%; height:100%; z-index:0; transition: opacity 1s ease; }
 .glitch {
   position:absolute;
   color:#f00;
-  text-shadow:
-    2px 0 #0f0, -2px 0 #0f0,
-    0 2px #0f0, 0 -2px #0f0;
+  text-shadow:2px 0 #0f0, -2px 0 #0f0, 0 2px #0f0, 0 -2px #0f0;
   animation: glitchAnim 0.2s infinite;
   user-select:none;
   pointer-events:none;
@@ -75,6 +73,7 @@ function matrixEffect(){
     yPos[i]++;
   }
 }
+matrixInterval=setInterval(matrixEffect,50);
 
 const screen=document.getElementById('screen');
 const normalMessages=[
@@ -90,16 +89,28 @@ const normalMessages=[
 ];
 let index=0,charIndex=0;
 
-function playContinuousSiren(duration){
-  const audioCtx=new (window.AudioContext||window.webkitAudioContext)();
-  const o=audioCtx.createOscillator();
-  const g=audioCtx.createGain();
-  o.type='square';
-  o.frequency.setValueAtTime(800,audioCtx.currentTime);
-  g.gain.setValueAtTime(0.2,audioCtx.currentTime);
-  o.connect(g); g.connect(audioCtx.destination);
-  o.start();
-  o.stop(audioCtx.currentTime+duration);
+// Continuous Siren
+let audioCtx, oscillator, gainNode;
+function playContinuousSiren(){
+  if(audioCtx) return; // Already playing
+  audioCtx = new (window.AudioContext || window.webkitAudioContext)();
+  oscillator = audioCtx.createOscillator();
+  gainNode = audioCtx.createGain();
+  oscillator.type = 'square';
+  oscillator.frequency.setValueAtTime(800, audioCtx.currentTime);
+  gainNode.gain.setValueAtTime(0.2, audioCtx.currentTime);
+  oscillator.connect(gainNode);
+  gainNode.connect(audioCtx.destination);
+  oscillator.start();
+}
+function stopSiren(){
+  if(oscillator){
+    oscillator.stop();
+    oscillator.disconnect();
+    gainNode.disconnect();
+    audioCtx.close();
+    oscillator = null; gainNode = null; audioCtx = null;
+  }
 }
 
 function corruptText(text){
@@ -120,10 +131,7 @@ function screenShake(){
 function mobileVibrate(){ if(meltdownActive && navigator.vibrate) navigator.vibrate([100,50,100]); }
 
 function typeNormalMessages(){
-  if(index>=normalMessages.length){
-    extremeWarningMode();
-    return;
-  }
+  if(index>=normalMessages.length){ extremeWarningMode(); return; }
   let msg=normalMessages[index];
   let span=document.createElement('span');
   screen.appendChild(span);
@@ -143,18 +151,15 @@ function typeNormalMessages(){
 
 function extremeWarningMode(){
   meltdownActive=true;
-  playContinuousSiren(25);
+  playContinuousSiren(); // Infinite siren
   let totalWarnings=0;
-  const maxWarnings=150;
+  const maxWarnings=200;
   matrixInterval=setInterval(matrixEffect,50);
   const warningInterval=setInterval(()=>{
     if(totalWarnings>=maxWarnings){ 
       clearInterval(warningInterval); 
       clearInterval(matrixInterval);
       meltdownActive=false;
-      // Freeze everything and crash UI
-      document.getElementById('terminal').classList.add('crashed');
-      document.body.classList.add('crashed');
       return;
     }
     const span=document.createElement('div');
@@ -162,22 +167,22 @@ function extremeWarningMode(){
     span.textContent=corruptText("!! CRITICAL ALERT: SYSTEM COMPROMISED !!");
     span.style.top=Math.random()*(window.innerHeight-30)+'px';
     span.style.left=Math.random()*(window.innerWidth-300)+'px';
-    span.style.fontSize=(16+Math.random()*24)+'px';
+    span.style.fontSize=(16+Math.random()*30)+'px';
+    span.style.color=Math.random()>0.5?'#f00':'#0f0';
     document.body.appendChild(span);
     screenShake();
     mobileVibrate();
     totalWarnings++;
-  },150);
+  },100);
 }
 
 typeNormalMessages();
 
 window.addEventListener('keydown', e=>{
   if(e.key==='Enter'){ 
+    stopSiren();
     index=0; charIndex=0; screen.innerHTML=''; 
     document.querySelectorAll('.glitch').forEach(el=>el.remove());
-    document.getElementById('terminal').classList.remove('crashed');
-    document.body.classList.remove('crashed');
     clearInterval(matrixInterval);
     typeNormalMessages(); 
   }
